module12/deployment/simple-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: simple-web
    spec:
      containers:
        - name: simple
          imagePullPolicy: Always
          image: jrmarcco/simple-web:metric
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: simple-web
