module12/deployment/simple-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-vs
spec:
  gateways:
    - simple-gw
  hosts:
    - simple.jrx.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: simple-web.simple-web.svc.cluster.local
            port:
              number: 80
